--- a/package.json
+++ b/package.json
@@ -5,7 +5,14 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "eject": "expo eject"
+    "eject": "expo eject",
+    "test": "jest"
+  },
+  "jest": {
+    "preset": "jest-expo-enzyme",
+    "transformIgnorePatterns": [
+      "node_modules/(?!(jest-)?react-native|react-clone-referenced-element|@react-native-community|expo(nent)?|@expo(nent)?/.*|react-navigation|@react-navigation/.*|@unimodules/.*|unimodules|sentry-expo|native-base|@sentry/.*)"
+    ]
   },
   "dependencies": {
     "@types/react-redux": "^7.1.7",
@@ -21,23 +28,25 @@
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
-    "@types/react": "~16.9.23",
-    "@types/react-native": "~0.61.17",
     "@types/enzyme": "^3.9.0",
     "@types/enzyme-adapter-react-16": "^1.0.5",
     "@types/expect": "^1.20.4",
     "@types/jest": "^25.1.4",
+    "@types/react": "~16.9.23",
+    "@types/react-native": "~0.61.17",
     "babel-preset-expo": "~8.1.0",
-    "typescript": "~3.8.3",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
     "enzyme-to-json": "^3.4.4",
-    "faker": "^4.1.0",
+    "jest-expo": "^37.0.0",
+    "jest-expo-enzyme": "^1.0.0",
+    "react-test-renderer": "^16.13.1",
     "ts-jest": "^24.0.2",
     "tslint": "^5.13.0",
     "tslint-config-airbnb": "^5.11.2",
     "tslint-react": "^3.6.0",
-    "tslint-react-hooks": "^2.2.2"
+    "tslint-react-hooks": "^2.2.2",
+    "typescript": "~3.8.3"
   },
   "private": true
 }
